# bookmarkengine

./: Cargo.toml  README.md  bookmarks.html  config.toml
doc/: README.md
src/: bookmark_item.rs  bookmarkdb.rs  config.rs  db.rs  main.rs  scanner.rs  token.rs  utils.rs
steps/: README
steps/s001-backend/: app.py
steps/s002-bookmark-extension/: background.js  manifest-firefox.json  manifest.json  popup.html  popup.js
steps/s003-token-based-auth/: app.py  clienttest-add-bookmark.sh  clienttest.sh
steps/s004-token-based-extension/: manifest-chrome.json  popup.js
steps/s005-mozilla-tutorial/borderify/: manifest.json
steps/s006-mozilla-tutorial-beasts/beastify/: manifest.json
steps/s007-reqwest/getpage/: Cargo.toml
steps/s009-scrape/scrape/: Cargo.toml
steps/s010-meilisearch/basicsearch/: Cargo.toml
steps/s011-tantivy/blogsearch/: Cargo.toml
steps/s012-parse-html/htmlparse/: Cargo.toml  index.html
steps/s013-parse-bookmarks/parsebookmarks/: Cargo.toml
steps/s014-parse-html5ever/parse/: Cargo.toml
steps/s015-bookmark-parser/parser/: Cargo.toml
steps/s017-scan/parser/: Cargo.toml
steps/s019-scan-bookmarks/scanner/: input.txt
steps/s024-bookmarks/scanner/: Cargo.toml
steps/s025-web-page-search/search/: Cargo.toml
steps/s034-bookmarks-incremental/scanner/: Cargo.toml
steps/s034-bookmarks-incremental/scanner/src/: bookmark_item.rs  scanner.rs  utils.rs
steps/s065-tidy-search-output/bookmarker/: Cargo.toml
steps/s065-tidy-search-output/bookmarker/src/: utils.rs
steps/s066-sqlite3/: README  create_bookmarks.sh  create_db.py  dump_db.py
(+144 files in other folders)
