[package]
name = "scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
html5ever = "0.36.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["__rustls", "__rustls-ring", "__tls", "blocking", "brotli"] }
url = "2"
tantivy = "0.25.0"
tempfile = "3.24.0"
scraper = "0.25.0"
chrono = "0.4.42"
